task: update email link and company info

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
       rel="stylesheet"
     />
     <!-- Material ui icons - google web fonts -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
@@ -245,13 +247,20 @@
           </svg>
         </div>
       </div>
-     
-    </div>
-      <footer class="footer">
-        <div class="container text-center">
-          <span>your-website-name.com</span>
+      <div class="row justify-content-center">
+        <div class="col-md-10" style="text-align: center;">
+          <h4>
+            For immediate enquiries, contact us at
+            <a href="mailto:info@ashton.consulting">info@ashton.consulting</a>
+          </h4>
         </div>
-      </footer>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container text-center">
+        <span>ashton.consulting</span>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
