task: change page title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Ashton Consulting</title>
   </head>
   <body>
     <div class="container">
