Revert "task: change page title"
This reverts commit 80e7b5b375bb92c19d832311e381671871804225.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>Ashton Consulting</title>
+    <title>Document</title>
   </head>
   <body>
     <div class="container">
